--- a/style.css
+++ b/style.css
@@ -1,5 +1,69 @@
+/* google font */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+
+}
+
+:root{
+    --font-color: #3A3A3A;
+}
+/* header section start */
+/* nav bar */
+header{
+    border: 2px solid red;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-top: 3rem;
+
+}
+.nav-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-bar h1{
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--font-color);
+}
+.nav-bar ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+
+}
+.nav-bar ul li{
+    list-style: none;
+
+
+}
+.nav-bar ul li a{
+    text-decoration: none;
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--font-color);
+}
+
+/* header section end */
+
+
+
+/* responsive style */
+@media only screen and (max-width: 576px) {
+    .nav-bar{
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .nav-bar ul{
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+    
 }
